<resources>
    <string name="app_name">StudyTooler</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="checkbox_re">记住密码</string>
    <string name="button_cancel">注册</string>
    <string name="button_confirm">登录</string>
    <string name="title_register">新用户注册</string>


    <string-array name="media_types">
        <item>text</item>
        <item>image</item>
        <item>audio</item>
        <item>video</item>
        <item>pdf</item>
    </string-array>
</resources>